# dnd2e

./: .gitignore  CLAUDE.md  actionsscreen_html.py  app.py  ask_controller.py  askscreen_html.py  browse_lists.py  build_chunks.py  build_economics.py  build_items.py  build_nwp_book.py  build_spells.py  calculator.py  char_rules.py  character.py  character_library.py  charactermancer.py  charactermancer_common.py  charactermancer_html.py  charactermancer_profs_html.py  chargen_html.py  conftest.py  ct_text.py  db.py  dmscreen_html.py  dnd2e.spec  equipment.py  monster.py  monster_abilities.py  monster_html.py  monster_library.py  monster_parser.py  monster_spells.py  monster_tiers.py  navigation.py  nonweapon_book.py  nonweapon_proficiencies.csv  nonweapon_proficiencies.txt  page_images.py  proficiencies_html.py  (+15 more)
.github/: dependabot.yml
docs/: audit-2-plan.md  audit-plan.md  combat-tactics-chargen-plan.md  index.html  leveling-plan.md  monster-mode-plan.md  nav-controller-plan.md  review-2026-07.md  toc-tree-fidelity.md  ux-feedback-plan.md
economics_csv/: Alchemy.csv  Animal_Gear.csv  Animals.csv  Armor_-_Partial.csv  Blackmarket.csv  Clothing.csv  Food.csv  Gear.csv  Inn_Costs.csv  Jobs.csv  Magic_Tools.csv  Metals.csv  Services.csv  Spell_Components.csv  Transpo.csv  Weapons.csv
roll20_sheet/: README.md  sheet.css  sheet.html
scripts/: build_chunks.py  build_ct_text.py  build_economics.py  build_icon.py  build_images.py  build_items.py  build_nwp_book.py  build_spells.py  build_splash_assets.py  build_toc_tree.py  retrieval_report.py
tests/: answer_eval.py  golden_retrieval.py  retrieval_report.py  test_answer_quality.py  test_architecture.py  test_ask_controller.py  test_ask_lifecycle.py  test_blob_store.py  test_browse_lists.py  test_browse_reachability.py  test_calculator.py  test_char_rules.py  test_character.py  test_character_library.py  test_charactermancer.py  test_cm_swap.py  test_css_no_flex_gap.py  test_db.py  test_dmscreen_rules.py  test_monster.py  test_monster_abilities.py  test_monster_html.py  test_monster_library.py  test_monster_spells.py  test_query.py  (+22 more)
(+2 files in other folders)
